--- a/src/page/home/Home.css
+++ b/src/page/home/Home.css
@@ -1,4 +1,39 @@
 .home-container{
     border: 1px solid;
     height: 600px;
+    display: flex;
+    flex-direction: column;
+    padding: 0.5rem;
+}
+.my-profile{
+    border: 3px solid red;
+    width: 30rem;
+}
+.profile-item01{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+}
+.profile-item02{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 1rem;
+}
+.profile-img img{
+    width: 200px;
+    border: 2px solid red;
+    border-radius: 0.5rem;
+}
+.item-container{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.profile-info{
+    font-weight: bold;
 }
