--- a/src/page/component/Component.css
+++ b/src/page/component/Component.css
@@ -1,4 +1,43 @@
 .component-container{
     border: 1px solid;
-    height: 600px;
+    height: 800px;
+    background: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0.5rem;
+}
+
+.contain01 {
+    display: flex;
+    gap: 0.5rem;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.contain03 {
+    width: 100%;
+}
+
+.componentcontainer {
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: url('../../../public/img/lotus-theory-1-5120x2880-19026.jpg') no-repeat;
+    background-size: cover;
+    border-radius: 0.5rem;
+}
+
+.footer-name {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    color: white;
+    padding: 0.5rem;
+    border-radius: 0.5rem;
+    border: 1px solid red;
 }
