--- a/src/page/Cart/Cart.css
+++ b/src/page/Cart/Cart.css
@@ -3,3 +3,12 @@
     padding: 0.5rem;
     text-align: center;
 }
+.cart-items-container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+    
+    overflow-y: auto;
+    height: 560px;
+    align-items: start;
+}
